# hpc-rs

./: Cargo.toml  README.md
benches/: external_memory.rs  instruction_level_parallelism.rs  number_theory.rs  simd.rs
src/: lib.rs
src/arithmetic/: mod.rs
src/caches/: alignment.rs
src/complexity/: programming_languages.rs
src/complexity_models/: mod.rs  programming_languages.rs
src/computer_architecture/: loops_and_conditionals.rs  mod.rs
src/external_memory/: cache_oblivious.rs  external_sorting.rs  mod.rs
src/instruction_level_parallelism/: branchless_programming.rs  mod.rs  the_cost_of_branching.rs
src/number_theory/: exgcd.rs  mod.rs  montgomery_multiplication.rs
src/profiling/: mod.rs  statistical_profiling.rs
src/simd/: mod.rs  reductions.rs  vector_types.rs
