[package]
name = "hpc-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
rand = "0.9.1"
criterion = "0.5"
likely_stable = "~0.1.3"

[profile.relwithdebinfo]
inherits = "release"
debug = 2

[[bench]]
name = "instruction_level_parallelism"
harness = false

[[bench]]
name = "number_theory"
harness = false
